# django-fastapi-crud

./: .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfilePostgreSQL  Makefile  README.md  docker-compose-django-test.yaml  docker-compose-django.yaml  docker-compose-fastapi-test.yaml  docker-compose-fastapi.yaml  docker-compose.yaml
django_example/: .flake8  pyproject.toml  startup.sh
django_example/medium_articles/: apps.py
django_example/medium_writers/: apps.py  models.py
django_example/medium_writers/migrations/: 0001_initial.py
django_example/mysite/: main.py  settings.py  urls.py
django_example/mysite/articles/: api.py  apps.py  constants.py  models.py  schemas.py
django_example/mysite/medium_articles/: apps.py
django_example/mysite/medium_writers/: api.py  apps.py  models.py  schemas.py  test_api.py
django_example/mysite/utils/: auth.py
django_example/mysite/writers/: api.py  apps.py  schemas.py  test_api.py
fastapi_example/: alembic.ini  pyproject.toml  startup.sh
fastapi_example/alembic/: env.py
fastapi_example/alembic/versions/: 407b70a35999_add_tags.py  423ee5dc11d9_add_term_occurrence_per_article_view.py  866bca1d8443_add_precalculated_tsvector.py  ab1bfe48ad14_initial.py  ad94f27b321e_initial_migration.py  bd76da865c4e_add_term_occurrence_per_corpus_view.py  f0aba27820ec_articles.py  fd88ac4beb88_create_dictionary.py
fastapi_example/mysite/: database.py  main.py  models.py  settings.py
fastapi_example/mysite/articles/: api.py  constants.py  models.py  schemas.py
fastapi_example/mysite/medium_writers/: api.py  models.py  schemas.py  test_api.py
fastapi_example/mysite/templates/: writer_stats.html
fastapi_example/mysite/text_analytics/: api.py  constants.py  models.py
fastapi_example/mysite/utils/: auth.py  initial_load_local_db.py  load_medium_articles.py
fastapi_example/mysite/writers/: api.py  models.py  schemas.py  test_api.py
(+11 files in other folders)
