[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["acirtep <acirtep>"]
readme = "README.md"
packages = [{include = "mysite"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-ninja = "^1.1.0"
psycopg2 = "^2.9.9"
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
