[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["acirtep <acirtep>"]
readme = "README.md"
packages = [{include = "mysite"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
flake8 = "^7.0.0"
black = "^24.4.0"
isort = "^5.13.2"
pydantic = {extras = ["email"], version = "^2.7.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = "true"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
